Minor changes to README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-An example of procedural trees in Processing.js.
+An example of 2D procedural trees in Processing.js.
 
 Runs also on mobile and touch devices (tested on iPhone 3GS, iPhone 4, some Android phones and a Honeycomb tablet).
 
